--- a/src/view/CadastrarPc/cadastro.css
+++ b/src/view/CadastrarPc/cadastro.css
@@ -5,3 +5,9 @@ textarea{
     min-width: auto!important;
     width: auto!important;
   }
+  .bg-table-cadastro{
+    border-radius:10px!important;
+    background-color: rgba(255,255,255, 0.3)!important;
+    backdrop-filter:blur(3.5px);
+    box-shadow: 0 0 25px 0 #999!important;  
+  }
