--- a/src/view/Home/style.css
+++ b/src/view/Home/style.css
@@ -3,4 +3,19 @@
     background-color: rgba(255,255,255, 0.7)!important;
     backdrop-filter:blur(0.5px);
     box-shadow: 0 0 20px 0 #fff!important;  
+    margin-top:2%;
   }
+
+.btn-class{
+  display: flex;
+  justify-content: center;
+  align-items: center!important;
+  margin-top: 6%;
+}
+.btn-height{
+  display: flex;
+  justify-content: center;
+  align-items: center!important;
+  /* min-height: 20%;
+  max-height: 40%; */
+}
